--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   image_picker: ^1.1.2
   file_picker: ^10.1.9
   firebase_storage: ^12.4.5
+  path_provider: ^2.1.5
 
 dev_dependencies:
   flutter_test:
