--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,7 @@ dependencies:
   file_picker: ^10.1.9
   firebase_storage: ^12.4.5
   path_provider: ^2.1.5
+  supabase_flutter: ^2.9.0
 
 dev_dependencies:
   flutter_test:
