--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,7 @@ dependencies:
   firebase_storage: ^12.4.5
   path_provider: ^2.1.5
   supabase_flutter: ^2.9.0
+  equatable: ^2.0.7
 
 dev_dependencies:
   flutter_test:
