--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,7 @@ dependencies:
   path_provider: ^2.1.5
   supabase_flutter: ^2.9.0
   equatable: ^2.0.7
+  provider: ^6.1.5
 
 dev_dependencies:
   flutter_test:
