--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,7 @@ dependencies:
   supabase_flutter: ^2.9.0
   equatable: ^2.0.7
   provider: ^6.1.5
+  supabase_auth_ui: ^0.5.5
 
 dev_dependencies:
   flutter_test:
