--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,6 +51,7 @@ dependencies:
   equatable: ^2.0.7
   provider: ^6.1.5
   supabase_auth_ui: ^0.5.5
+  flutter_dotenv: ^5.2.1
 
 dev_dependencies:
   flutter_test:
@@ -74,6 +75,8 @@ flutter:
   # the material Icons class.
   uses-material-design: true
 
+assets:
+  - .env
   # To add assets to your application, add an assets section, like this:
   # assets:
   #   - images/a_dot_burr.jpeg
